# EMerge

./: .bumpversion.toml  .gitignore  .opt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  TestFilename.s2p  UMFPACK_Install_windows.md  UMFPACK_installer_windows.py  floquet_analysis.py  pyproject.toml  stltest.stl
MyProject/: MyFile_post.py  MyFile_sim.py
MyProject/MyFile_data/: simdata.emerge
StackedPatchDemo/: File1_sim.py  File1_view.py
examples/: demo0_parallel_plate.py  demo10_sgh.py  demo11_lumped_element_filter.py  demo12_mode_alignment.py  demo13_helix_antenna.py  demo14_boundary_selection.py  demo15_strip_slotline_transition.py  demo16_differential_common_mode.py  demo17_step_import.py  demo18_plotting_and_visualization.py  demo19_vivaldi_antenna.py  demo1_stepped_imp_filter.py  demo20_optimization.py  demo2_combline_filter.py  demo3_coupled_line_filter.py  demo3_filter_internet.py  demo3_patch_antenna.py  demo4_boundary_selection.py  demo4_patch_antenna.py  demo5_revolve.py  demo6_striplines_with_vias.py  demo7_periodic_cells.py  demo8_waveguide_bpf_synthesis.py  demo9_dielectric_resonator.py
myproject/: myfile_post.py  myfile_sim.py
myproject/myfile_data/: simdata.emerge
ridge horn_data/: mesh.brep  model.brep
src/_emerge/: bc.py  cli.py  coord.py  cs.py  dataset.py  dataset_old.py  geometry.py  howto.py  material.py  mesh3d.py  mesher.py  periodic.py  selection.py  simmodel.py  simulation_data.py  solver.py  system.py
src/_emerge/elements/: femdata.py  index_interp.py  legrange2.py  ned2_interp.py  nedelec2.py  nedleg2.py
src/_emerge/geo/: __init__.py  builder.py  extrude.py  operations.py  pcb.py  polybased.py  shapes.py  step.py  stl.py
src/_emerge/geo/pcb_tools/: macro.py
src/_emerge/mth/: common_functions.py  integrals.py  optimized.py  sparam.py  tet.py
src/_emerge/physics/: __init__.py
src/_emerge/physics/edm/: adaptive_freq.py  assembler.py  emdata.py  emfreq3d.py  nedeleclegrange2.py  port_functions.py  simjob.py  touchstone.py
src/_emerge/physics/microwave/: microwave_3d.py  microwave_bc.py  microwave_data.py  periodic.py  sc.py  simjob.py
src/_emerge/plot/: display.py  grapher.py  simple_plots.py
src/_emerge/plot/matplotlib/: mpldisplay.py
src/_emerge/projects/: _gen_base.txt  _load_base.txt  generate_project.py
src/emerge/: __init__.py  __main__.py  bc.py  cli.py  core.py  cs.py  dataset.py  ext.py  geo3d.py  integrals.py  lib.py  logsettings.py  mesh3d.py  mesher.py  plot.py  pyvista.py  simmodel.py  solver.py
src/emerge/_emerge/: __init__.py  _cache_check.py  bc.py  cacherun.py  const.py  coord.py  cs.py  dataset.py  emerge_update.py  geo2d.py  geometry.py  howto.py  install_check.py  logsettings.py  material.py  mesh3d.py  mesher.py  optim.py  periodic.py  selection.py  settings.py  simmodel.py  simstate.py  simulation_data.py  solver.py  system.py
src/emerge/auxilliary/: touchstone.py
src/emerge/beta/: dxf.py
src/emerge/elements/: __init__.py  legrange2.py  nedelec2.py  nedleg2.py
src/emerge/geo/: extrude.py  horn.py  modeler.py  operations.py  pmlbox.py  shapes.py
src/emerge/materials/: __init__.py  isola.py  rogers.py
src/emerge/modeling/: __init__.py  extrude.py  horn.py  modeler.py  operations.py  pcb.py  pmlbox.py  shapes.py
src/emerge/mth/: optimized.py  tri.py
src/emerge/plot/: __init__.py  display.py
src/emerge/plotting/: display.py
src/emerge/projects/: _gen_base.txt  _load_base.txt
waveguide_data/: model.brep
(+84 files in other folders)
