[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "emerge"
version = "0.4.7"
description = "An open source EM FEM simulator in Python"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "gmsh>=4.13.1",
    "joblib>=1.5.1",
    "loguru>=0.7.3",
    "numba>=0.61.2",
    "numba-progress>=1.1.3",
    "numpy>=2.2.6",
    "pyvista>=0.45.2",
    "scipy>=1.15.3",
]

[project.scripts]
emerge = "_emerge.cli:main"

[tool.hatch.build.targets.sdist]
only-include = ["src/_emerge", "src/emerge"]

[tool.hatch.build.targets.sdist.sources]
"src/_emerge" = "_emerge"
"src/emerge"  = "emerge"

[project.optional-dependencies]
pypardiso = [
  "pypardiso",
]
umfpack = [
  "scikit-umfpack",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
no-build-isolation-package = ["cchardet"]

[project.urls]
Homepage = "https://github.com/FennisRobert/EMerge"
Issues = "https://github.com/FennisRobert/EMerge/issues"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy"